--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <div class="aaa">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a href="https://goal-life.com/page/method/matrix-eisenhower"
+            class="more_inf">Want more details?
+      </a>
     </div>
     <div class="centered-main-page-element">
       <p id="topSectionForAddingElementToList">
