--- a/index.html
+++ b/index.html
@@ -9,37 +9,37 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="eisenhower-matrix-description">
       <img src="./eisenhower-matrix.jpg">
       <a href="https://goal-life.com/page/method/matrix-eisenhower"
-            class="more_inf">Want more details?
+            class="more-information-link">Want more details?
       </a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main-content-wrapper">
+      <p id="add-task-section-header">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task" class="task" type="text">
+          <input id="new-task-input" class="task-input" type="text">
           <button>Add</button>
         </div>
       </p>
       <h3>Todo</h3>
-      <ul id="incomplete-tasks">
+      <ul id="incompleted-tasks">
         <li>
           <input type="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <label class="task-label">Pay Bills</label>
+          <input type="text" class="task-input">
+          <button class="edit-button">Edit</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task">
-          <button class="edit">Save</button>
-          <button class="delete">
+          <label class="task-label">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-input">
+          <button class="edit-button">Save</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
@@ -48,10 +48,10 @@
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task">
-          <button class="edit">Edit</button>
-          <button class="delete">
+          <label class="task-label">See the Doctor</label>
+          <input type="text" class="task-input">
+          <button class="edit-button">Edit</button>
+          <button class="delete-button">
             <img src="./remove.svg">
           </button>
         </li>
