--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="eisenhower-matrix-description">
+    <div class="eisenhower-matrix-desc">
       <img src="./eisenhower-matrix.jpg">
       <a href="https://goal-life.com/page/method/matrix-eisenhower"
             class="more-information-link">Want more details?
       </a>
     </div>
     <div class="main-content-wrapper">
-      <p id="add-task-section-header">
+      <p id="add-task-header">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task-input" class="task-input" type="text">
@@ -27,19 +27,19 @@
       <ul id="incompleted-tasks">
         <li>
           <input type="checkbox">
-          <label class="task-label">Pay Bills</label>
+          <label class="task-lbl">Pay Bills</label>
           <input type="text" class="task-input">
-          <button class="edit-button">Edit</button>
-          <button class="delete-button">
+          <button class="edit-btn">Edit</button>
+          <button class="del-btn">
             <img src="./remove.svg">
           </button>
         </li>
         <li class="edit-mode">
           <input type="checkbox">
-          <label class="task-label">Go Shopping</label>
+          <label class="task-lbl">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task-input">
-          <button class="edit-button">Save</button>
-          <button class="delete-button">
+          <button class="edit-btn">Save</button>
+          <button class="del-btn">
             <img src="./remove.svg">
           </button>
         </li>
@@ -48,10 +48,10 @@
       <ul id="completed-tasks">
         <li>
           <input type="checkbox" checked>
-          <label class="task-label">See the Doctor</label>
+          <label class="task-lbl">See the Doctor</label>
           <input type="text" class="task-input">
-          <button class="edit-button">Edit</button>
-          <button class="delete-button">
+          <button class="edit-btn">Edit</button>
+          <button class="del-btn">
             <img src="./remove.svg">
           </button>
         </li>
