--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="body">
     <div class="eisenhower-matrix-desc">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" class="img">
       <a href="https://goal-life.com/page/method/matrix-eisenhower"
             class="more-information-link">Want more details?
       </a>
@@ -19,42 +19,42 @@
       <p id="add-task-header">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task-input" class="task-input" type="text">
-          <button>Add</button>
+          <input id="new-task-input" class="input task-input" type="text">
+          <button class="btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incompleted-tasks">
-        <li>
-          <input type="checkbox">
+      <h3 class="title">Todo</h3>
+      <ul id="incompleted-tasks" class="ul">
+        <li class="li">
+          <input type="checkbox" class="input">
           <label class="task-lbl">Pay Bills</label>
-          <input type="text" class="task-input">
-          <button class="edit-btn">Edit</button>
-          <button class="del-btn">
+          <input type="text" class="input task-input">
+          <button class="btn edit-btn">Edit</button>
+          <button class="btn del-btn">
             <img src="./remove.svg">
           </button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox">
+        <li class="edit-mode li">
+          <input type="checkbox" class="input">
           <label class="task-lbl">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task-input">
-          <button class="edit-btn">Save</button>
-          <button class="del-btn">
+          <input type="text" value="Go Shopping" class="input task-input">
+          <button class="btn edit-btn">Save</button>
+          <button class="btn del-btn">
             <img src="./remove.svg">
           </button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked>
+      <h3 class="title">Completed</h3>
+      <ul id="completed-tasks" class="ul">
+        <li class="li">
+          <input type="checkbox" class="input" checked>
           <label class="task-lbl">See the Doctor</label>
-          <input type="text" class="task-input">
-          <button class="edit-btn">Edit</button>
-          <button class="del-btn">
+          <input type="text" class="input task-input">
+          <button class="btn edit-btn">Edit</button>
+          <button class="btn del-btn">
             <img src="./remove.svg">
           </button>
-        </li>
+        </li class="li">
       </ul>
     </div>
     <script src="app.js"></script>
