--- a/index.html
+++ b/index.html
@@ -14,49 +14,54 @@
       <a href="https://goal-life.com/page/method/matrix-eisenhower"
             class="more-information-link">Want more details?
       </a>
-    </div>
-    <div class="main-content-wrapper">
-      <p id="add-task-header">
+    </div>  
+    </header>
+    <main class="main-content-wrapper">
+      <section>
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task-input" class="input task-input" type="text">
           <button class="btn">Add</button>
         </div>
-      </p>
-      <h3 class="title">Todo</h3>
-      <ul id="incompleted-tasks" class="ul">
-        <li class="li">
-          <input type="checkbox" class="input">
-          <label class="task-lbl">Pay Bills</label>
-          <input type="text" class="input task-input">
-          <button class="btn edit-btn">Edit</button>
-          <button class="btn del-btn">
-            <img src="./remove.svg">
-          </button>
-        </li>
-        <li class="edit-mode li">
-          <input type="checkbox" class="input">
-          <label class="task-lbl">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="input task-input">
-          <button class="btn edit-btn">Save</button>
-          <button class="btn del-btn">
-            <img src="./remove.svg">
-          </button>
-        </li>
-      </ul>
-      <h3 class="title">Completed</h3>
-      <ul id="completed-tasks" class="ul">
-        <li class="li">
-          <input type="checkbox" class="input" checked>
-          <label class="task-lbl">See the Doctor</label>
-          <input type="text" class="input task-input">
-          <button class="btn edit-btn">Edit</button>
-          <button class="btn del-btn">
-            <img src="./remove.svg">
-          </button>
-        </li class="li">
-      </ul>
-    </div>
+      </section>
+      <section>
+        <h1 class="title">Todo</h1>
+        <ul id="incompleted-tasks" class="ul">
+          <li class="li">
+            <input type="checkbox" class="input">
+            <label class="task-lbl">Pay Bills</label>
+            <input type="text" class="input task-input">
+            <button class="btn edit-btn">Edit</button>
+            <button class="btn del-btn">
+              <img src="./remove.svg">
+            </button>
+          </li>
+          <li class="edit-mode li">
+            <input type="checkbox" class="input">
+            <label class="task-lbl">Go Shopping</label>
+            <input type="text" value="Go Shopping" class="input task-input">
+            <button class="btn edit-btn">Save</button>
+            <button class="btn del-btn">
+              <img src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2 class="title">Completed</h2>
+        <ul id="completed-tasks" class="ul">
+          <li class="li">
+            <input type="checkbox" class="input" checked>
+            <label class="task-lbl">See the Doctor</label>
+            <input type="text" class="input task-input">
+            <button class="btn edit-btn">Edit</button>
+            <button class="btn del-btn">
+              <img src="./remove.svg">
+            </button>
+          </li>
+        </ul>
+      </section>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
