refactor: add "alt" for images according to rule 1.2 in html-and-css-extended

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body class="body">
     <div class="eisenhower-matrix-desc">
-      <img src="./eisenhower-matrix.jpg" class="img">
+      <img src="./eisenhower-matrix.jpg" class="img" alt="Eisenhower Matrix">
       <a href="https://goal-life.com/page/method/matrix-eisenhower"
             class="more-information-link">Want more details?
       </a>
@@ -33,7 +33,7 @@
             <input type="text" class="input task-input">
             <button class="btn edit-btn">Edit</button>
             <button class="btn del-btn">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="Close">
             </button>
           </li>
           <li class="edit-mode li">
@@ -42,7 +42,7 @@
             <input type="text" value="Go Shopping" class="input task-input">
             <button class="btn edit-btn">Save</button>
             <button class="btn del-btn">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="Close">
             </button>
           </li>
         </ul>
@@ -56,7 +56,7 @@
             <input type="text" class="input task-input">
             <button class="btn edit-btn">Edit</button>
             <button class="btn del-btn">
-              <img src="./remove.svg">
+              <img src="./remove.svg" alt="Close">
             </button>
           </li>
         </ul>
