--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body class="body">
-    <div class="eisenhower-matrix-desc">
-      <img src="./eisenhower-matrix.jpg" class="img" alt="Eisenhower Matrix">
+  <body  class="body">
+    <header class="header">
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix" class="header__image">
       <a href="https://goal-life.com/page/method/matrix-eisenhower"
-            class="more-information-link">Want more details?
+            class="header__link">Want more details?
       </a>
     </div>  
     </header>
-    <main class="main-content-wrapper">
-      <section>
+    <main class="main main_centered">
+      <section class="add-task-section">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="add-task-section__content">
           <input id="new-task-input" class="input task-input" type="text">
-          <button class="btn">Add</button>
+          <button class="btn add-task-section__add-btn">Add</button>
         </div>
       </section>
-      <section>
+      <section class="to-do-task-section">
         <h1 class="title">Todo</h1>
-        <ul id="incompleted-tasks" class="ul">
+        <ul id="incompleted-tasks" class="ul task-list">
           <li class="li">
             <input type="checkbox" class="input">
             <label class="task-lbl">Pay Bills</label>
@@ -47,9 +47,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="to-do-task-section">
         <h2 class="title">Completed</h2>
-        <ul id="completed-tasks" class="ul">
+        <ul id="completed-tasks" class="ul task-list">
           <li class="li">
             <input type="checkbox" class="input" checked>
             <label class="task-lbl">See the Doctor</label>
